Fixed a bug with vertical align images in firefox.
git-svn-id: http://xe-shop.googlecode.com/svn/trunk@616 a237117d-c3a3-7e14-bcca-fd8395c59b2d

--- a/skins/default/shop.css
+++ b/skins/default/shop.css
@@ -918,17 +918,17 @@ li span.close-sign, li span.open-sign {
 }
 
 .product-list .product-link .product-image-container {
-    padding: 19px;
+    padding: 0 19px;
     border: 1px solid #cacaca;
     border-bottom: 0;
     width: 170px;
-    height: 170px;
-    display: block;
+    height: 208px;
     display: table-cell;
     vertical-align: middle;
 }
 
 .product-list .product-link .product-image-container.list-view {
+    padding: 19px;
     border: 1px solid #cacaca;
     width: 130px;
     height: 130px;
